--- a/app/src/main/res/values/them1.xml
+++ b/app/src/main/res/values/them1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="them1" parent="Theme.AppCompat.Light">
-        <item name="android:textColor">#FF0000</item>
+        <item name="android:textColor">#0000FF</item>
         <item name="android:textSize">28sp</item>
 
     </style>
